--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 	<audio id="audio" autoplay loop>
 		<source src="audio10.mp3" type="audio/mpeg">
 	</audio>
-	<button onclick="incrementCounter()">Click me!</button>
-	<button id="reset" onclick="resetCounter()">Reset</button>
+	<button onclick="incrementCounter()">点击这里!</button>
+	<button id="reset" onclick="resetCounter()">重置</button>
 </body>
 </html>
