--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>从0数到10,000</title>
     <style>
 		body {
-			background-color: #555;
+			background-color: hsl(0, 0%, 100%);
 			font-family: 'Helvetica Neue', sans-serif;
 			font-size: 16px;
 			color: #fff;
@@ -36,7 +36,7 @@
 		button {
 			display: block;
 			margin: 0 auto;
-			padding: 20px;
+			padding: 10px;
 			border: none;
 			background-color: #3498db;
 			color: #fff;
@@ -59,7 +59,7 @@
 		#reset-button {
 			display: block;
 			margin: 50px auto 0;
-			padding: 20px;
+			padding: 10px;
 			border: none;
 			background-color: #3498db;
 			color: #fff;
@@ -135,8 +135,8 @@
 	</script>
 </head>
 <body>
-	<h1>Click Counter</h1>
-	<p id="counter">Clicks: 0</p>
+	<h1>从0数到10,000</h1>
+	<p id="counter">次数: 0</p>
 	<img id="gif" src="gif10.gif" />
 	<audio id="audio" autoplay loop>
 		<source src="audio10.mp3" type="audio/mpeg">
