--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 			color: #fff;
 		}
         img {
-            display: block;
-            margin: 0 auto;
-            justify-content: center;
-        }
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            }
+
 
 		h1 {
 			text-align: center;
@@ -26,10 +28,11 @@
 
 		#counter {
 			display: block;
-			text-align: center;
+			position: relative;
+            top: -50;
 			font-size: 80px;
 			margin-top: 100px;
-			color: #fff;
+			color: #3498db;
 			text-shadow: 2px 2px #666;
 		}
 
