--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
 			color: #fff;
 		}
         img {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            }
-
+            display: block;
+            margin: 0 auto;
+            justify-content: center;
+        }
 
 		h1 {
 			text-align: center;
@@ -28,8 +26,8 @@
 
 		#counter {
 			display: block;
-			position: relative;
-            top: -50;
+			text-align: center;
+            top: -20px;
 			font-size: 80px;
 			margin-top: 100px;
 			color: #3498db;
