--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             display: block;
             margin: 0 auto;
             justify-content: center;
-            top: 30px;
+            top: -30px;
         }
 
 		h1 {
@@ -36,6 +36,8 @@
 		}
 
 		button {
+            display: inline-block;
+            margin-right: 10px;
 			display: block;
 			margin: 0 auto;
 			padding: 10px;
