--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
 
 		button {
             display: inline-block;
-            margin-right: 10px;
-			display: block;
 			margin: 0 auto;
 			padding: 10px;
 			border: none;
@@ -57,11 +55,12 @@
 		#gif-container {
 			display: flex;
 			justify-content: center;
-			margin-top: 50px;
+			margin-top: -50px;
 		}
 
 		#reset-button {
-			display: block;
+			display: inline-block;
+            margin-right: 10px;
 			margin: 50px auto 0;
 			padding: 10px;
 			border: none;
