--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
 		button {
             display: inline-block;
+            justify-content: center;
 			margin: 0 auto;
 			padding: 10px;
 			border: none;
@@ -55,11 +56,13 @@
 		#gif-container {
 			display: flex;
 			justify-content: center;
-			margin-top: -50px;
+            position: relative;
+			top: -50px;
 		}
 
 		#reset-button {
 			display: inline-block;
+            justify-content: center;
             margin-right: 10px;
 			margin: 50px auto 0;
 			padding: 10px;
