--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="css/styling.css">
+	/Semantic-UI-CSS-master
 	<title>从0数到10,000</title>
 	<script src="js/script.js"></script>
 
