--- a/index.html
+++ b/index.html
@@ -6,15 +6,9 @@
 		jinitaimei
 	</title>
     <link rel="stylesheet" href="css/styling.css">
-	<link rel="stylesheet"
-		href=
-"https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
-	<script src=
-"https://code.jquery.com/jquery-3.1.1.min.js">
-	</script>
-	<script src=
-"https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js">
-	</script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 </head>
 
 <body>
